traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:0: error: not found: value MondeLargeur
class TraversalByColumn extends SimpleBuggle {override def run() {def positionFinale():Boolean= {if (getX()==getMondeHauteur()&&getY==MondeLargeur()) {return true}
                                                                                                                                      ^