traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {def positionFinale():Boolean= {if (getX()==getMondeHauteur()&&getY==MondeLargeur()) {return true}
                                                  else {return false}}
                    
                    def marche() {setCouleurBrosse(Color.RED); baisseBrosse(); while (!positionFinale()) 
                                {if (estFaceMur())
                                 {setPos(0,getY()+1)}
                                  else {setPos(getX()+1,getY())}
                                 }
                                 }
                                
marche();}